= Changelog

== Fishing For Fishies

== Evil Death Roll 2024-12-17

- Bug fixes and Performance
- Fixed Image Caching
- Sorting for shows and years
- Show media loading in media player ui

== Dawn of Eternal Night 2024-12-08

- Fix system ui icon being same color as app background
- Fix issue when playing a new show would always play the first song
even when taping other songs in the show.
- Show show title in place of band name in Android Auto
- Add settings screen, with ability to choose default stream type

== Converge-Patch1 2024-11-18

- Removes dependenciesInfo from bundle and apk for f-droid release

== Converge 2024-11-13

- Release for new play store listing
- Updates for f-droid release

== Big Fig Wasp 2024-11-07

- Setup Foss and Full Variants for f-droid release
- Added media player error state and cleaned up the PlayerState
- Display media player errors to the UI in a snackbar
- Added no poster url
- Update Rows Font and Spacing
- Added About Page

== Antarctica 2024-10-07

- Got the app up and running!